Fix show-poster RHS alignment, closes #87

--- a/_sass/_shows.sass
+++ b/_sass/_shows.sass
@@ -22,6 +22,7 @@
   float: right !important // HACK
   img
     width: 100%
+    padding-right: 0 // Remove
 
   @include respond-down($grid-column-end)
     // Hide on single col
